V6.36/README.md
# Kite Altimeter – CircuitPython Project  

This repository contains the **CircuitPython `code.py`** file for the **Kite Altimeter project** (Hardware Version 6, Software Version 36).  

The project runs on an **Adafruit Feather RP2040 Adalogger** and records altitude and related data during kite flights.  

---

## Development Environment  

- **Board:** Adafruit Feather RP2040 Adalogger  
- **Language:** [CircuitPython](https://circuitpython.org/)  
- **IDE:** [Thonny 4.1.4](https://thonny.org/) running on Raspberry Pi P5  
  - A full Raspberry Pi OS install includes Thonny by default.  
- **Library Management:** [Circup](https://github.com/adafruit/circup) was used to install and update the required libraries on the device.  
- **File System Copy:**  
  - The `tree` output shown below was generated on a **Raspberry Pi 5** using a copy of the RP2040’s files.  
  - This provides a reference of the deployed files on the device.  

---

## Repository Structure  

The following files and directories as deployed to the Feather RP2040 Adalogger:  

```text
.
├── boot_out.txt            # Auto-generated CircuitPython boot message
├── code.py                 # Main program (Kite Altimeter v36)
├── lib/                    # CircuitPython libraries
│   ├── adafruit_bitmap_font
│   │   ├── bdf.mpy
│   │   ├── bitmap_font.mpy
│   │   ├── glyph_cache.mpy
│   │   ├── __init__.py
│   │   ├── lvfontbin.mpy
│   │   ├── pcf.mpy
│   │   └── ttf.mpy
│   ├── adafruit_bno055.mpy
│   ├── adafruit_bus_device
│   │   ├── i2c_device.mpy
│   │   ├── __init__.py
│   │   └── spi_device.mpy
│   ├── adafruit_displayio_sh1107.mpy
│   ├── adafruit_display_text
│   │   ├── bitmap_label.mpy
│   │   ├── __init__.mpy
│   │   ├── label.mpy
│   │   ├── outlined_label.mpy
│   │   ├── scrolling_label.mpy
│   │   └── text_box.mpy
│   ├── adafruit_dps310
│   │   ├── advanced.mpy
│   │   ├── basic.mpy
│   │   └── __init__.mpy
│   ├── adafruit_ds3231.mpy
│   ├── adafruit_pcf8523
│   │   ├── clock.mpy
│   │   ├── pcf8523.mpy
│   │   └── timer.mpy
│   ├── adafruit_pixelbuf.mpy
│   ├── adafruit_register
│   │   ├── i2c_bcd_alarm.mpy
│   │   ├── i2c_bcd_datetime.mpy
│   │   ├── i2c_bit.mpy
│   │   ├── i2c_bits.mpy
│   │   ├── i2c_struct_array.mpy
│   │   ├── i2c_struct.mpy
│   │   └── __init__.py
│   ├── adafruit_sdcard.mpy
│   ├── adafruit_ticks.mpy
│   ├── fs3000.mpy
│   └── neopixel.mpy
├── sd
│   └── placeholder.txt     # Placeholder for logged data files
├── settings.toml           # Project configuration settings
└── System Volume Information/ (auto-generated by OS)
    ├── IndexerVolumeGuid
    └── WPSettings.dat

```

---

## Key Components  

- **Sensors & Hardware**  
  - Adafruit DPS310 – Barometric pressure/altitude sensor  
  - Adafruit BNO055 – 9-DoF absolute orientation sensor  
  - Adafruit DS3231 / PCF8523 – Real-time clock options  
  - FS3000 – Airflow sensor  
  - SH1107 – 128×128 OLED display  
  - NeoPixel – Visual status indicator  
  - SD card (via Adalogger) – Data logging  

- **Data Logging**  
  - Sensor data is written to the SD card in CSV format.  
  - `settings.toml` stores configuration parameters.  

---

## Getting Started  

1. Install CircuitPython on the **Adafruit Feather RP2040 Adalogger**.  
2. Use **Circup** to install required libraries into the `lib/` directory.  
   ```bash
   circup install -r requirements.txt
   ```  
   (or manually copy from [Adafruit CircuitPython Library Bundle](https://circuitpython.org/libraries)).  
3. Copy `code.py` and `settings.toml` to the device root.  
4. Insert an SD card into the Adalogger. Data files will be created in the `/sd/` directory.  
5. Power the board and begin logging data during kite flights.  

---

## Dependencies  

The project requires several Adafruit CircuitPython libraries. These can be installed using **Circup** with the provided `requirements.txt` file.  

### Installation  

Run the following command from your computer (while the Feather RP2040 is connected by USB):  

```bash
circup install -r requirements.txt
```  

### requirements.txt  

```text
adafruit_bitmap_font
adafruit_bno055
adafruit_bus_device
adafruit_displayio_sh1107
adafruit_display_text
adafruit_dps310
adafruit_ds3231
adafruit_pcf8523
adafruit_pixelbuf
adafruit_register
adafruit_sdcard
adafruit_ticks
fs3000
neopixel
```  

---

## Notes  

- The project was developed on a **Raspberry Pi P5** but can be used on other systems with CircuitPython support.  
- The `tree` output was produced on a Raspberry Pi 5 from a copy of the RP2040’s file system.  
- Directory paths reflect the deployment on the RP2040 board.  
